--- a/src/test.properties
+++ b/src/test.properties
@@ -1,5 +1,8 @@
-#hubUrl=http://jenkins:4444/wd/hub
-#baseUrl=http://adolf-nat:10083/
+#grid.hubUrl=http://jenkins:4444/wd/hub
+grid.hubUrl=http://jenkins-nat:14444/wd/hub
 
-hubUrl=http://jenkins-nat:14444/wd/hub
-baseUrl=http://mercedes/
+#grid.baseUrl=http://porsche-nat:10082/
+grid.baseUrl=http://porsche/
+
+test.username=unittest
+test.password=password
