Added some timing

--- a/src/test.properties
+++ b/src/test.properties
@@ -1,8 +1,10 @@
 #grid.hubUrl=http://jenkins:4444/wd/hub
-grid.hubUrl=http://jenkins-nat:14444/wd/hub
+#grid.hubUrl=http://jenkins-nat:14444/wd/hub
+grid.hubUrl=http://127.0.0.1:4444/wd/hub
 
 #grid.baseUrl=http://porsche-nat:10082/
-grid.baseUrl=http://porsche/
+#grid.baseUrl=http://porsche/
+grid.baseUrl=http://sasha/
 
 test.username=unittest
 test.password=password
