--- a/config/nikki-node-config.json
+++ b/config/nikki-node-config.json
@@ -19,9 +19,9 @@
 	"configuration": {
 		"maxSession": 5,
 		"port": 5555,
-		"host": "jenkins",
 		"register": true,
 		"registerCycle": 5000,
+		"hubHost": "jenkins",
 		"hubPort": 4444
 	}
 }
